Fix dependency issue + mobcard name overflow

--- a/src/components/domain/models/Mob/MobCard/MobCard.scss
+++ b/src/components/domain/models/Mob/MobCard/MobCard.scss
@@ -42,7 +42,7 @@
   }
 
   &__resin {
-    flex: 1;
+    min-width: fit-content;
     display: flex;
     align-items: center;
 
